deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: card-shop
spec:
  replicas: 3
  minReadySeconds: 5
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: card-shop
  template:
    metadata:
      labels:
        app: card-shop
    spec:
      containers:
      - name: project2-container
        image: fentrymartin7/fentrymartin:project2
        ports:
        - containerPort: 8080
