deployment/card-shop-service.yml
apiVersion: v1
kind: Service
metadata:
  name: card-shop-service
  namespace: k8s-cluster
  labels:
    app: card_shop
spec:
  selector:
    app: card_shop
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
