deployment/demo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: card-shop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/card-shop/(.*)"
        backend:
          service:
            name: card-shop-service
            port: 
              number: 8080
